--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-/* .back{
-    background-color: black;
-} */
-.perv{
-    color: aqua;
+body{
+    font-family: "Roboto", sans-serif;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none ;
 }
